<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="mr_button_content_description">Cast button</string>
    <string name="mr_cast_button_connected">Cast button. Connected</string>
    <string name="mr_cast_button_connecting">Cast button. Connecting</string>
    <string name="mr_cast_button_disconnected">Cast button. Disconnected</string>
    <string name="mr_chooser_searching">Finding devices</string>
    <string name="mr_chooser_title">Cast to</string>
    <string name="mr_controller_album_art">Album art</string>
    <string name="mr_controller_casting_screen">Casting screen</string>
    <string name="mr_controller_close_description">Close</string>
    <string name="mr_controller_collapse_group">Collapse</string>
    <string name="mr_controller_disconnect">Disconnect</string>
    <string name="mr_controller_expand_group">Expand</string>
    <string name="mr_controller_no_info_available">No info available</string>
    <string name="mr_controller_no_media_selected">No media selected</string>
    <string name="mr_controller_pause">Pause</string>
    <string name="mr_controller_play">Play</string>
    <string name="mr_controller_stop">Stop casting</string>
    <string name="mr_controller_volume_slider">Volume slider</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="tedpermission_close">Close</string>
    <string name="tedpermission_confirm">Confirm</string>
    <string name="tedpermission_setting">Setting</string>
    <string name="APIKEY">AIzaSyDn6pn0jXhIe43ugUcQhkcSW2-b1Tihfuc</string>
    <string name="INC1">Employer \'s Pension Plan</string>
    <string name="INC10">RRSP/ RRIF Income</string>
    <string name="INC11">Annuity Income</string>
    <string name="INC12">Profit-sharing Fund pay out</string>
    <string name="INC13">Earned Income in Retirement</string>
    <string name="INC14">Disability Insurance Payments</string>
    <string name="INC15">Income from Real Estate</string>
    <string name="INC16">Income from Rental property / suite</string>
    <string name="INC17">Savings Account interest</string>
    <string name="INC18">Investment Income</string>
    <string name="INC19">Sale of Business - shares</string>
    <string name="INC2">Employer\'s Pension Plan / Union Pension Plan</string>
    <string name="INC20" tools:ignore="TypographyDashes">Life Insurance Investment growth Account Value</string>
    <string name="INC21">Other Income such as Social welfare or UIC/ Alimony</string>
    <string name="INC3">Self Directed Pension Plan</string>
    <string name="INC4">Canada Pension Plan/ Disability Pension Plan</string>
    <string name="INC5">Veteran\'s Pension Plan</string>
    <string name="INC6">Old Age Security</string>
    <string name="INC7">Guaranteed Income Supplement</string>
    <string name="INC8">Other Retirement Income</string>
    <string name="btn_forgotPassword">Forgot Password ?</string>
    <string name="btn_login">Login</string>
    <string name="btn_loging">Guest user login</string>
    <string name="btn_register">Register</string>
    <string name="hint_Company">Company</string>
    <string name="hint_DateofBirth">Date of Birth</string>
    <string name="hint_Doctor">Doctor</string>
    <string name="hint_Location">Location</string>
    <string name="hint_MedicalCard">Medical Card</string>
    <string name="hint_Name">Name</string>
    <string name="hint_Password">Password</string>
    <string name="hint_Payment">Payment</string>
    <string name="hint_PetType">Pet Type</string>
    <string name="hint_Propertyname">Property name</string>
    <string name="hint_SpecialNeeds">Special Needs</string>
    <string name="hint_Veterinarian">Veterinarian</string>
    <string name="hint_account">Account #</string>
    <string name="hint_email">Enter email address</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_username">Enter user name</string>
    <string name="medical_tip1">TIP:For each areas above consider the following and enter relevant info:</string>
    <string name="medical_tip2">Results - Did you complete appointment? What is the plan of action? Enter that info.</string>
    <string name="medical_tip3">Treatment - Saw a specialist? Got a prescription? Book a test? Enter that info.</string>
    <string name="medical_tip4">Prescription - Enter the prescription and take a photo as well.</string>
    <string name="txt_AddressOfproperty">Address of property (Item)?</string>
    <string name="txt_Appointments">Appointments</string>
    <string name="txt_PricePaid">Price Paid:</string>
    <string name="txt_RegisteredOwner">Registered Owner(s)</string>
    <string name="txt_addNewFiled">Add new field</string>
    <string name="txt_at_institution">At Institution</string>
    <string name="txt_dateOfPurchase">Date of Purchase</string>
    <string name="txt_online">Online</string>
    <string name="txt_paid">Paid At:</string>
    <string name="txt_photo_real_estate">Take Photos of Your Property Deed</string>
    <string name="txt_rent1">MORTGAGE PAYMENT</string>
    <string name="txt_skip">Skip</string>
</resources>