<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="vertical" android:background="@drawable/bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textStyle="bold" android:textColor="@android:color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30dp" android:text="@string/btn_loging"/>
        <EditText android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/edit_username" android:background="@drawable/bg_input_top" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:hint="@string/hint_username" android:singleLine="true" android:inputType="text" android:imeOptions="actionNext"/>
        <EditText android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/editPassword" android:background="@drawable/bg_input_bottom" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:hint="@string/hint_Password" android:singleLine="true" android:inputType="textPassword" android:imeOptions="actionDone"/>
        <Button android:textColor="@android:color/white" android:id="@+id/btn_login" android:background="@drawable/btn_change_pass" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/btn_login"/>
        <TextView android:textColor="@android:color/black" android:id="@+id/skip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/txt_skip"/>
    </LinearLayout>
</LinearLayout>
