<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp">
        <EditText android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="center_vertical" android:id="@+id/editId" android:padding="5dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:singleLine="true"/>
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="normal" android:textColor="@android:color/black" android:layout_gravity="center_vertical" android:id="@+id/rentLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:layout_marginBottom="5dp" android:text="@string/txt_rent1"/>
        <EditText android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="center_vertical" android:id="@+id/editCompany" android:background="@drawable/bg_input_top" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_Company" android:singleLine="true"/>
        <EditText android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="center_vertical" android:id="@+id/editAccount" android:background="@drawable/bg_input_center" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_account" android:singleLine="true"/>
        <EditText android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="center_vertical" android:id="@+id/editPayment" android:background="@drawable/bg_input_center" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_Payment" android:singleLine="true" android:inputType="number"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@drawable/bg_input_bottom" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="normal" android:textColor="@android:color/black" android:layout_gravity="center_vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="5dp" android:layout_marginBottom="5dp" android:text="@string/txt_paid" android:layout_weight="0.25"/>
        <RadioGroup android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.75">
            <RadioButton android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@android:color/black" android:id="@+id/isOnline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:button="@drawable/radio_selector" android:text="@string/txt_online"/>
            <RadioButton android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@android:color/black" android:id="@+id/isInstitution" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@drawable/radio_selector" android:text="@string/txt_at_institution"/>
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
